Apply subtemplate patch to new release (see fork/0.13)

--- a/Dockerfile.build.alpine
+++ b/Dockerfile.build.alpine
@@ -1,7 +1,7 @@
 FROM golang:1.9-alpine
 
 RUN apk add --no-cache make
-RUN mkdir -p /go/src/github.com/kelseyhightower/confd && \
-  ln -s /go/src/github.com/kelseyhightower/confd /app
+RUN mkdir -p /go/src/github.com/blippar/confd && \
+  ln -s /go/src/github.com/blippar/confd /app
 
 WORKDIR /app
